# doggo-data

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  pyproject.toml
src/: clean.py  scrape.py
src/scraped_data/: dogs_data_clean.json  dogs_data_raw.json
