[project]
name = "doggo-data"
version = "0.1.0"
description = "A Python project for analyzing dog shelter data and adoption trends."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Zsolt Varga", email = "zsoltvarga94@gmail.com" }
]
keywords = ["dog", "data-analysis", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.9"

dependencies = [
    "requests== 2.32.3",
    "beautifulsoup4==4.12.3",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "black==24.10.0",
    "ruff==0.9.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'  # Include .py and .pyi files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''