[tool.poetry]
package-mode = false
name = "doggo-data"
description = "A Python project for analyzing dog shelter data and adoption trends."
readme = "README.md"
license = "MIT"
authors = ["Zsolt Varga zsoltvarga94@gmail.com"]
keywords = ["dog", "data-analysis", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.dependencies]
beautifulsoup4 = "4.12.3"
pandas = "2.2.3"
python = "^3.9"
requests = "2.32.3"
selenium = "4.27.1"

[tool.poetry.dev-dependencies]
black = "24.10.0"
pre-commit = "4.0.1"
pytest = "8.3.4"
ruff = "0.9.1"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]
exclude = [
    "venv/",
]
fix = true